--- a/html/UserProfile.html
+++ b/html/UserProfile.html
@@ -17,14 +17,13 @@
 <body>
     <div data-role="page">
         <div role="main" class="login ui-content">
-            
+
             <img class="User-registration Ipad-logo-size logo-image" src="../Resources/images/Logos/Transparent.png"
                 alt="User Icon">
 
-            <label class="login-labels orange-label" for="username">Username</label>
-            <input class="input-white-background" type="text" name="Username" id="Username" placeholder="Username"
-                value="">
-            <label class="login-labels orange-label" for="username">Email</label>
+            <label class="orange-label" for="username">Username</label>
+            <label class="orange-label" for="username">Email</label>
+
             <input class="input-white-background" type="text" name="Email" id="Email" placeholder="Email" value="">
             <label class="login-labels orange-label" for="password">Password</label>
             <input class="input-white-background" type="text" name="password" id="password" placeholder="Password"
