--- a/html/Dashboard.html
+++ b/html/Dashboard.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>User Profile</title>
+    <title>Dashboard</title>
     <link rel="stylesheet" href="../Resources/themes/main/Main-Theme.css" />
     <link rel="stylesheet" href="../Resources/themes/main/jquery.mobile.icons.min.css" />
     <link rel="stylesheet" href="../css/main.css" />
@@ -16,24 +16,51 @@
 
 <body>
     <div data-role="page">
-        <div role="main" class="login ui-content">
-
-            <img class="User-registration Ipad-logo-size logo-image" src="../Resources/images/Logos/Transparent.png"
-                alt="User Icon">
-            <label class="UserNavigation-labels login-labels orange-label" for="username">Username:</label>
-            <label class="UserNavigation-labels login-labels orange-label" for="username">Email:</label>
-
-            <ul class="Profile-Navigation-List" data-role="listview">
-                <li><a href="#">About Us</a></li>
-                <li><a href="#">My Favourites</a></li>
-                <li><a href="#">Categories</a></li>
-                <li><a href="#">Leaderboard</a></li>
-                <li><a href="#">Order History</a></li>
-            </ul>
-
+        <div data-role="header" class="header-class">
+            <button class="btn-home" data-role="button" data-shadow="false" data-theme="none">
+                <img src="../Resources/images/Logos/" border="0" />
+            </button>
+            <h1 class="header-title">Home</h1>
+            <button class="btn-userprofile" data-role="button" data-shadow="false" data-theme="none">
+                <img src="../Resources/images/icons/" border="0" />
+            </button>
         </div>
-        <p class="UserNavigation logout User-Profile-Edit Register-Account-Text"><a href="Login.html">Logout</a></p>
-        <p class="UserNavigation User-Profile-Edit Register-Account-Text"><a href="Login.html">Back to Home</a></p>
+
+
+   
+    <div class="page-footer footer-class" data-role="footer"
+        style="position:absolute; bottom:0px; left:0px; right:0px; overflow:hidden;">
+        <div data-role="navbar" data-iconpos="bottom">
+            <ul>
+                <li>
+                    <!-- <a href="#" data-role="button" data-icon="homeicon"></a> -->
+                    <button class="btn-nav-bar" data-role="button" data-shadow="false" data-theme="none">
+                        <img class="footer-icons" src="../Resources/images/icons/icons8-home-24.png" border="0" />
+                    </button>
+                </li>
+                <li>
+                    <button class="btn-nav-bar" data-role="button" data-shadow="false" data-theme="none">
+                        <img class="footer-icons" src="../Resources/images/icons/001-search.png" border="0" />
+                    </button>
+                </li>
+                <li>
+                    <button class="btn-nav-bar" data-role="button" data-shadow="false" data-theme="none">
+                        <img class="footer-icons" src="../Resources/images/icons/002-fire.png" border="0" />
+                    </button>
+                </li>
+                <li>
+                    <button class="btn-nav-bar" data-role="button" data-shadow="false" data-theme="none">
+                        <img class="footer-icons" src="../Resources/images/icons/009-shopping-cart-1.png" border="0" />
+                    </button>
+                </li>
+                <li>
+                    <button class="btn-nav-bar" data-role="button" data-shadow="false" data-theme="none">
+                        <img class="footer-icons" src="../Resources/images/icons/003-menu.png" border="0" />
+                    </button>
+                </li>
+            </ul>
+        </div>
+    </div>
     </div><!-- /content -->
 </body>
 
