--- a/html/ProductPage.html
+++ b/html/ProductPage.html
@@ -1,63 +1,198 @@
 <!DOCTYPE html>
 <html>
-
-<head>
+  <head>
     <title>Product</title>
     <script type="text/javascript" src="../js/ProductPage.js"></script>
     <link rel="stylesheet" href="../Resources/themes/innerTheme/HomePage.css" />
-    <link rel="stylesheet" href="../Resources/themes/Home/jquery.mobile.icons.min.css" />
-    <link rel="stylesheet" href="http://code.jquery.com/mobile/1.4.5/jquery.mobile.structure-1.4.5.min.css" />
-    <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
-    <link rel="stylesheet" href="../css/main.css">
+    <link
+      rel="stylesheet"
+      href="../Resources/themes/Home/jquery.mobile.icons.min.css"
+    />
+    <link
+      rel="stylesheet"
+      href="http://code.jquery.com/mobile/1.4.5/jquery.mobile.structure-1.4.5.min.css"
+    />
+    <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css" />
+    <link rel="stylesheet" href="../css/main.css" />
     <script src="http://code.jquery.com/jquery-1.11.1.min.js"></script>
     <script src="http://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.js"></script>
-</head>
+  </head>
 
-<body>
+  <body>
     <div data-role="page" data-theme="d">
+      <div data-role="header" class="header-class">
+        <button
+          class="btn-home"
+          data-role="button"
+          data-shadow="false"
+          data-theme="none"
+        >
+          <img src="../Resources/images/Logos/Transparent.png" border="0" />
+        </button>
+        <h1 class="header-title">Product Page</h1>
+        <button
+          class="btn-userprofile"
+          data-role="button"
+          data-shadow="false"
+          data-theme="none"
+        >
+          <img src="../Resources/images/icons/user.png" border="0" />
+        </button>
+      </div>
 
-        <div role="main" class="product ui-content">
-            <div class="product-title-slideshow-container">
-                <h1>Playstation Pro 1TB</h1>
-                <div class="w3-content w3-display-container">
-                    <img class="mySlides" src="../Resources/images/items/ps4problack.png" style="width:100%">
-                    <img class="mySlides" src="../Resources/images/items/ps4white.png" style="width:100%">
-                    <img class="mySlides" src="../Resources/images/items/ps4blackwithcontroller.png" style="width:100%">
-                    <div class="w3-center w3-container w3-section w3-large w3-text-white w3-display-bottommiddle"
-                        style="width:100%">
-                        <div class="w3-left w3-hover-text-khaki" onclick="plusDivs(-1)">&#10094;</div>
-                        <div class="w3-right w3-hover-text-khaki" onclick="plusDivs(1)">&#10095;</div>
-                        <span class="w3-badge demo w3-border w3-transparent w3-hover-white"
-                            onclick="currentDiv(1)"></span>
-                        <span class="w3-badge demo w3-border w3-transparent w3-hover-white"
-                            onclick="currentDiv(2)"></span>
-                        <span class="w3-badge demo w3-border w3-transparent w3-hover-white"
-                            onclick="currentDiv(3)"></span>
-                    </div>
-                </div>
+      <div role="main" class="product ui-content">
+        <div class="product-title-slideshow-container">
+          <h1>Playstation Pro 1TB</h1>
+          <div class="w3-content w3-display-container">
+            <img
+              class="mySlides"
+              src="../Resources/images/items/ps4problack.png"
+              style="width:100%"
+            />
+            <img
+              class="mySlides"
+              src="../Resources/images/items/ps4white.png"
+              style="width:100%"
+            />
+            <img
+              class="mySlides"
+              src="../Resources/images/items/ps4blackwithcontroller.png"
+              style="width:100%"
+            />
+            <div
+              class="w3-center w3-container w3-section w3-large w3-text-white w3-display-bottommiddle"
+              style="width:100%"
+            >
+              <div class="w3-left w3-hover-text-khaki" onclick="plusDivs(-1)">
+                &#10094;
+              </div>
+              <div class="w3-right w3-hover-text-khaki" onclick="plusDivs(1)">
+                &#10095;
+              </div>
+              <span
+                class="w3-badge demo w3-border w3-transparent w3-hover-white"
+                onclick="currentDiv(1)"
+              ></span>
+              <span
+                class="w3-badge demo w3-border w3-transparent w3-hover-white"
+                onclick="currentDiv(2)"
+              ></span>
+              <span
+                class="w3-badge demo w3-border w3-transparent w3-hover-white"
+                onclick="currentDiv(3)"
+              ></span>
             </div>
-
-            <div class="product-details-container">
-                <p>The PS4 Pro is Sony’s supercharged version of the PS4. Not a true
-                    next-generation machine in terms of features or horsepower, but a high-performance variant designed
-                    to dish out smoother frame rates, 4K pictures and high dynamic range
-                    (HDR).
-                </p>
-
-                <div>
-                    <p>Total</p>
-                    <p>$300</p>
-                </div>
-
-                <div>
-                    <p>Quantity:</p>
-                    <p>- 1 +</p>
-                </div>
-
-                <button>Add to cart</button>
-            </div>
+          </div>
         </div>
-    </div>
-</body>
 
+        <div class="product-details-container">
+          <p>
+            The PS4 Pro is Sony’s supercharged version of the PS4. Not a true
+            next-generation machine in terms of features or horsepower, but a
+            high-performance variant designed to dish out smoother frame rates,
+            4K pictures and high dynamic range (HDR).
+          </p>
+
+          <div>
+            <p>Total</p>
+            <p>$300</p>
+          </div>
+
+          <div>
+            <p>Quantity:</p>
+            <p>- 1 +</p>
+          </div>
+
+          <button>Add to cart</button>
+        </div>
+      </div>
+
+      <div
+        class="page-footer footer-class"
+        data-role="footer"
+        style="position:absolute; bottom:0px; left:0px; right:0px; overflow:hidden;"
+      >
+        <div data-role="navbar" data-iconpos="bottom">
+          <ul>
+            <li>
+              <!-- <a href="#" data-role="button" data-icon="homeicon"></a> -->
+              <button
+                class="btn-nav-bar"
+                data-role="button"
+                data-shadow="false"
+                data-theme="none"
+              >
+                <img
+                  src="../Resources/images/icons/icons8-home-24.png"
+                  border="0"
+                  width="35px"
+                  height="35px"
+                />
+              </button>
+            </li>
+            <li>
+              <button
+                class="btn-nav-bar"
+                data-role="button"
+                data-shadow="false"
+                data-theme="none"
+              >
+                <img
+                  src="../Resources/images/icons/001-search.png"
+                  border="0"
+                  width="35px"
+                  height="35px"
+                />
+              </button>
+            </li>
+            <li>
+              <button
+                class="btn-nav-bar"
+                data-role="button"
+                data-shadow="false"
+                data-theme="none"
+              >
+                <img
+                  src="../Resources/images/icons/002-fire.png"
+                  border="0"
+                  width="35px"
+                  height="35px"
+                />
+              </button>
+            </li>
+            <li>
+              <button
+                class="btn-nav-bar"
+                data-role="button"
+                data-shadow="false"
+                data-theme="none"
+              >
+                <img
+                  src="../Resources/images/icons/003-shopping-cart.png"
+                  border="0"
+                  width="35px"
+                  height="35px"
+                />
+              </button>
+            </li>
+            <li>
+              <button
+                class="btn-nav-bar"
+                data-role="button"
+                data-shadow="false"
+                data-theme="none"
+              >
+                <img
+                  src="../Resources/images/icons/003-menu.png"
+                  border="0"
+                  width="35px"
+                  height="35px"
+                />
+              </button>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </div>
+  </body>
 </html>
