favourit,catagory, catagories pages added

--- a/html/Games.html
+++ b/html/Games.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Food</title>
+  <title>Games</title>
   <link rel="stylesheet" href="../Resources/themes/main/Main-Theme.css" />
   <link rel="stylesheet" href="../Resources/themes/innerTheme/HomePage.css" />
   <link rel="stylesheet" href="../Resources/themes/main/jquery.mobile.icons.min.css" />
@@ -21,7 +21,7 @@
       <button class="btn-home" data-role="button" data-shadow="false" data-theme="none">
         <img src="../Resources/images/Logos/Transparent.png" border="0" />
       </button>
-      <h1 class="header-title">Food</h1>
+      <h1 class="header-title">Games</h1>
 
       <button class="btn-userprofile" data-role="button" data-shadow="false" data-theme="none">
         <img src="../Resources/images/icons/header-userprofile.png" border="0" />
