--- a/html/favourite.html
+++ b/html/favourite.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Food</title>
+  <title>Favourite</title>
   <link rel="stylesheet" href="../Resources/themes/main/Main-Theme.css" />
   <link rel="stylesheet" href="../Resources/themes/innerTheme/HomePage.css" />
   <link rel="stylesheet" href="../Resources/themes/main/jquery.mobile.icons.min.css" />
@@ -21,7 +21,7 @@
       <button class="btn-home" data-role="button" data-shadow="false" data-theme="none">
         <img src="../Resources/images/Logos/Transparent.png" border="0" />
       </button>
-      <h1 class="header-title">Food</h1>
+      <h1 class="header-title">Favourite</h1>
 
       <button class="btn-userprofile" data-role="button" data-shadow="false" data-theme="none">
         <img src="../Resources/images/icons/header-userprofile.png" border="0" />
@@ -36,6 +36,7 @@
           <li class="second-nav-header"><a class="second-nav-header-radius" href="#">Games</a></li>
           <li class="second-nav-header"><a class="second-nav-header-radius" href="#">Manga</a></li>
         </ul>
+
       </div>
       <div role="main" class="favourites ui-content">
     
@@ -45,7 +46,7 @@
             <div class="add-to-cart-button-div style=" Style="background: none !important;">
               <a href="#popupLogin" data-rel="popup" data-position-to="window"
                 class=" ui-corner-all  ui-btn-inline ui-btn-a" data-transition="pop"><img class="add-to-cart-plus-icon"
-                  src="../Resources/images/icons/heart (1).png" border="0" /></a>  
+                  src="../Resources/images/icons/valentines-heart.png" border="0" /></a>  
             </div>
           </div>
           <img class="product-image-items-display" src="../Resources/images/items/ps4 png.png" alt=" PS4"
@@ -103,7 +104,7 @@
                 <div class="add-to-cart-button-div style=" Style="background: none !important;">
                   <a href="#popupLogin" data-rel="popup" data-position-to="window"
                     class=" ui-corner-all  ui-btn-inline ui-btn-a" data-transition="pop"><img class="add-to-cart-plus-icon"
-                      src="../Resources/images/icons/heart (1).png" border="0" /></a>  
+                      src="../Resources/images/icons/valentines-heart.png" border="0" /></a>  
                 </div>
               </div>
               <img class="product-image-items-display" src="../Resources/images/items/ps4 png.png" alt=" PS4"
@@ -157,7 +158,7 @@
               <div class="add-to-cart-button-div style=" Style="background: none !important;">
                 <a href="#popupLogin" data-rel="popup" data-position-to="window"
                   class=" ui-corner-all  ui-btn-inline ui-btn-a" data-transition="pop"><img class="add-to-cart-plus-icon"
-                    src="../Resources/images/icons/heart (1).png" border="0" /></a>  
+                    src="../Resources/images/icons/valentines-heart.png" border="0" /></a>  
               </div>
             </div>
             <img class="product-image-items-display" src="../Resources/images/items/ps4 png.png" alt=" PS4"
@@ -215,7 +216,7 @@
                   <div class="add-to-cart-button-div style=" Style="background: none !important;">
                     <a href="#popupLogin" data-rel="popup" data-position-to="window"
                       class=" ui-corner-all  ui-btn-inline ui-btn-a" data-transition="pop"><img class="add-to-cart-plus-icon"
-                        src="../Resources/images/icons/heart (1).png" border="0" /></a>  
+                        src="../Resources/images/icons/valentines-heart.png" border="0" /></a>  
                   </div>
                 </div>
                 <img class="product-image-items-display" src="../Resources/images/items/ps4 png.png" alt=" PS4"
@@ -266,12 +267,14 @@
           </div>
   
       </div>
- 
-      <br>
-      <br>
-      <br>
-      <br>
-  
+      <div class="email-list-button">
+            <button  type="submit" class="login-button ui-btn ui-btn-inline rounded-button">Mail List</button>
+      </div>
+    <br>
+    <br>
+    <br>
+    <br>
+
 
     </div>
 
