--- a/html/ProductPage.html
+++ b/html/ProductPage.html
@@ -35,8 +35,24 @@
           data-role="button"
           data-shadow="false"
           data-theme="none"
+          style="margin-right: 100px;"
         >
-          <img src="../Resources/images/icons/user.png" border="0" />
+          <img
+            src="../Resources/images/icons/icons8-camera-24.png"
+            border="0"
+          />
+        </button>
+        <button
+          class="btn-userprofile"
+          data-role="button"
+          data-shadow="false"
+          data-theme="none"
+          style="margin-top: -250px; margin-bottom: -200px; margin-left: 90%;"
+        >
+          <img
+            src="../Resources/images/icons/header-userprofile.png"
+            border="0"
+          />
         </button>
       </div>
 
