--- a/html/ProductPage.html
+++ b/html/ProductPage.html
@@ -6,11 +6,14 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Food</title>
+    <script type="text/javascript" src="../js/ProductPage.js"></script>
     <link rel="stylesheet" href="../Resources/themes/main/Main-Theme.css" />
     <link rel="stylesheet" href="../Resources/themes/innerTheme/HomePage.css" />
     <link rel="stylesheet" href="../Resources/themes/main/jquery.mobile.icons.min.css" />
     <link rel="stylesheet" href="../css/main.css" />
     <link rel="stylesheet" href="http://code.jquery.com/mobile/1.4.5/jquery.mobile.structure-1.4.5.min.css" />
+
+
 
     <script src="http://code.jquery.com/jquery-1.11.1.min.js"></script>
     <script src="http://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.js"></script>
@@ -43,10 +46,11 @@
         <div role="main" class="product ui-content">
             <div class="product-title-slideshow-container">
                 <p class="single-product-page-title">Playstation Pro 1TB</p>
+
                 <div class="single-product-background w3-content w3-display-container">
-                    <img class="mySlides" src="../Resources/images/items/ps4 png.png" style="width: 700px; height : 500px;" />
-                    <img class="mySlides" src="../Resources/images/items/PS4.jpg" style="width: 700px; height: 500px;" />
-                    <img class="mySlides" src="../Resources/images/items/ps4 png.png" style="width: 700px; height: 500px;" />
+                    <img class="mySlides" src="../Resources/images/items/ps4 png.png" />
+                    <img class="mySlides" src="../Resources/images/items/PS4.jpg" />
+                    <img class="mySlides" src="../Resources/images/items/ps4 png.png" />
                     <div class="w3-center w3-container w3-section w3-large w3-text-white w3-display-bottommiddle" style="width:80%">
                         <div class="w3-left w3-hover-text-khaki" onclick="plusDivs(-1)">
                             &#10094;
@@ -54,9 +58,7 @@
                         <div class="w3-right w3-hover-text-khaki" onclick="plusDivs(1)">
                             &#10095;
                         </div>
-                        <span class="single-product-page-photos-iconball w3-badge demo w3-border w3-transparent w3-hover-white" onclick="currentDiv(1)"></span>
-                        <span class="single-product-page-photos-iconball w3-badge demo w3-border w3-transparent w3-hover-white" onclick="currentDiv(2)"></span>
-                        <span class="single-product-page-photos-iconball w3-badge demo w3-border w3-transparent w3-hover-white" onclick="currentDiv(3)"></span>
+
                     </div>
                 </div>
             </div>
@@ -76,53 +78,68 @@
                     <br>
                     <p class="single-product price">Quantity :</p>
                     <button class="single-product-page btn-nav-bar addmore-button-quantity-popup" data-role="button" data-shadow="false" data-theme="none">
-                    <img class="single-product  product-popup-icon" src="../Resources/images/icons/001-add.png" border="0"
-                      width="35px" height="35px" />
-                  </button>
+            <img class="single-product  product-popup-icon" src="../Resources/images/icons/001-add.png" border="0"
+              width="35px" height="35px" />
+          </button>
                     <p class="single-product price float-price">1</p>
                     <button class="single-product-page btn-nav-bar addmore-button-quantity-popup" data-role="button" data-shadow="false" data-theme="none">
-                    <img class="single-product product-popup-icon" src="../Resources/images/icons/002-substract.png" border="0" width="35px"
-                      height="35px" />
-                  </button>
+            <img class="single-product product-popup-icon" src="../Resources/images/icons/002-substract.png" border="0"
+              width="35px" height="35px" />
+          </button>
                 </div>
 
                 <button>Add to cart</button>
             </div>
-        </div>
+            <div class="comment-section-background">
+                <img class="comment-user-icon  product-popup-icon" src="../Resources/images/icons/header-userprofile.png" border="0" < />
+                <p class=" price"><b>Ruchila</b></p>
+                <br>
+                <img class="comment-rating-icon  product-popup-icon" src="../Resources/images/icons/Stars png.png" border="0" </div> <br>
+                <p class="comment-title price"><b>Title</b></p>
+                <br>
+                <p class="comment-description ">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen
+                    book.
+                </p>
+            </div>
 
-        <div class="page-footer footer-class" data-role="footer" style="position:absolute; bottom:0px; left:0px; right:0px; overflow:hidden;">
-            <div data-role="navbar" data-iconpos="bottom">
-                <ul>
-                    <li>
-                        <!-- <a href="#" data-role="button" data-icon="homeicon"></a> -->
-                        <button class="btn-nav-bar" data-role="button" data-shadow="false" data-theme="none">
-              <img src="../Resources/images/icons/icons8-home-24.png" border="0" width="35px" height="35px" />
-            </button>
-                    </li>
-                    <li>
-                        <button class="btn-nav-bar" data-role="button" data-shadow="false" data-theme="none">
-              <img src="../Resources/images/icons/001-search.png" border="0" width="35px" height="35px" />
-            </button>
-                    </li>
-                    <li>
-                        <button class="btn-nav-bar" data-role="button" data-shadow="false" data-theme="none">
-              <img src="../Resources/images/icons/002-fire.png" border="0" width="35px" height="35px" />
-            </button>
-                    </li>
-                    <li>
-                        <button class="btn-nav-bar" data-role="button" data-shadow="false" data-theme="none">
-              <img src="../Resources/images/icons/003-shopping-cart.png" border="0" width="35px" height="35px" />
-            </button>
-                    </li>
-                    <li>
-                        <button class="btn-nav-bar" data-role="button" data-shadow="false" data-theme="none">
-              <img src="../Resources/images/icons/003-menu.png" border="0" width="35px" height="35px" />
-            </button>
-                    </li>
-                </ul>
+            <br>
+            <br>
+            <br>
+            <br>
+
+            <div class="page-footer footer-class" data-role="footer" style="position:absolute; bottom:0px; left:0px; right:0px; overflow:hidden;">
+                <div data-role="navbar" data-iconpos="bottom">
+                    <ul>
+                        <li>
+                            <!-- <a href="#" data-role="button" data-icon="homeicon"></a> -->
+                            <button class="btn-nav-bar" data-role="button" data-shadow="false" data-theme="none">
+                <img src="../Resources/images/icons/icons8-home-24.png" border="0" width="35px" height="35px" />
+              </button>
+                        </li>
+                        <li>
+                            <button class="btn-nav-bar" data-role="button" data-shadow="false" data-theme="none">
+                <img src="../Resources/images/icons/001-search.png" border="0" width="35px" height="35px" />
+              </button>
+                        </li>
+                        <li>
+                            <button class="btn-nav-bar" data-role="button" data-shadow="false" data-theme="none">
+                <img src="../Resources/images/icons/002-fire.png" border="0" width="35px" height="35px" />
+              </button>
+                        </li>
+                        <li>
+                            <button class="btn-nav-bar" data-role="button" data-shadow="false" data-theme="none">
+                <img src="../Resources/images/icons/003-shopping-cart.png" border="0" width="35px" height="35px" />
+              </button>
+                        </li>
+                        <li>
+                            <button class="btn-nav-bar" data-role="button" data-shadow="false" data-theme="none">
+                <img src="../Resources/images/icons/003-menu.png" border="0" width="35px" height="35px" />
+              </button>
+                        </li>
+                    </ul>
+                </div>
             </div>
         </div>
-    </div>
 </body>
 
 </html>
