NEW: API integration to login, register, categories, products, product details

--- a/html/Login.html
+++ b/html/Login.html
@@ -27,7 +27,7 @@
                 value="">
 
             <div class=" button-container">
-                <button type="submit" class="login-button ui-btn ui-btn-inline rounded-button">Login</button>
+                <button onclick="doLogin()" class="login-button ui-btn ui-btn-inline rounded-button">Login</button>
             </div>
 
             <a href="">Forgot Password?</a>
