--- a/html/Register.html
+++ b/html/Register.html
@@ -32,7 +32,7 @@
                 placeholder="Confirm Password" value="">
 
             <div class=" button-container">
-                <button type="submit" class="login-button ui-btn ui-btn-inline rounded-button">Login</button>
+                <button onclick="doRegister()" class="login-button ui-btn ui-btn-inline rounded-button">Login</button>
             </div>
             <p class="Register-Account-Text">Already have an account? <a href="Login.html">Login NOW!</a></p>
         </div>
