Fix: Fixed cart page

--- a/html/Cart.html
+++ b/html/Cart.html
@@ -39,103 +39,18 @@
         </div>
         <div role="main" class="orderhistpru ui-content">
             <div class="order-main">
-                <div class="order-item">
-                    <div class="order-item-image">
-                        <img class="order-product product-image-items-display" src="../Resources/images/items/ps4 png.png" alt=" PS4" style="width:70%; float: left;" />
-                    </div>
-                    <div class="order-item-text">
-                        <p style="margin-top: 2px;"><b>PlayStation 4</b></p>
-                        <p class="order-product-desctiption">The PS4 Pro is Sony’s supercharged version of the PS4.
-                        </p>
-                        <p class="price">Product Price :</p>
-                        <p class="price float-price">$400</p>
-                        <br>
-                        <p class="price">Quantity :</p>
-                        <p class="price float-price">5</p>
-                        <button class="remove-from-cart" data-role="button" data-shadow="false" data-theme="none">
-                                Remove
-                              </button>
 
-                    </div>
-                </div>
-                <div class="order-item">
-                    <div class="order-item-image">
-                        <img class="order-product product-image-items-display" src="../Resources/images/items/ps4 png.png" alt=" PS4" style="width:70%; float: left;" />
-                    </div>
-                    <div class="order-item-text">
-                        <p style="margin-top: 2px;"><b>PlayStation 4</b></p>
-                        <p class="order-product-desctiption">The PS4 Pro is Sony’s supercharged version of the PS4.
-                        </p>
-                        <p class="price">Product Price :</p>
-                        <p class="price float-price">$400</p>
-                        <br>
-                        <p class="price">Quantity :</p>
-                        <p class="price float-price">5</p>
-                        <button class="remove-from-cart" data-role="button" data-shadow="false" data-theme="none">
-                                    Remove
-                                  </button>
+                <div class="loader">
+                    <img class="loader-gif" src="../images/pupper2.gif">
+                    <p>The goodest boi is getting you cart items...</p>
 
-                    </div>
-                </div>
-                <div class="order-item">
-                    <div class="order-item-image">
-                        <img class="order-product product-image-items-display" src="../Resources/images/items/ps4 png.png" alt=" PS4" style="width:70%; float: left;" />
-                    </div>
-                    <div class="order-item-text">
-                        <p style="margin-top: 2px;"><b>PlayStation 4</b></p>
-                        <p class="order-product-desctiption">The PS4 Pro is Sony’s supercharged version of the PS4.
-                        </p>
-                        <p class="price">Product Price :</p>
-                        <p class="price float-price">$400</p>
-                        <br>
-                        <p class="price">Quantity :</p>
-                        <p class="price float-price">5</p>
-                        <button class="remove-from-cart" data-role="button" data-shadow="false" data-theme="none">
-                                        Remove
-                                      </button>
-                    </div>
-                </div>
-                <div class="order-item">
-                    <div class="order-item-image">
-                        <img class="order-product product-image-items-display" src="../Resources/images/items/ps4 png.png" alt=" PS4" style="width:70%; float: left;" />
-                    </div>
-                    <div class="order-item-text">
-                        <p style="margin-top: 2px;"><b>PlayStation 4</b></p>
-                        <p class="order-product-desctiption">The PS4 Pro is Sony’s supercharged version of the PS4.
-                        </p>
-                        <p class="price">Product Price :</p>
-                        <p class="price float-price">$400</p>
-                        <br>
-                        <p class="price">Quantity :</p>
-                        <p class="price float-price">5</p>
-                        <button class="remove-from-cart" data-role="button" data-shadow="false" data-theme="none">
-                                        Remove
-                                      </button>
-                    </div>
-                </div>
-                <div class="order-item">
-                    <div class="order-item-image">
-                        <img class="order-product product-image-items-display" src="../Resources/images/items/ps4 png.png" alt=" PS4" style="width:70%; float: left;" />
-                    </div>
-                    <div class="order-item-text">
-                        <p style="margin-top: 2px;"><b>PlayStation 4</b></p>
-                        <p class="order-product-desctiption">The PS4 Pro is Sony’s supercharged version of the PS4.
-                        </p>
-                        <p class="price">Product Price :</p>
-                        <p class="price float-price">$400</p>
-                        <br>
-                        <p class="price">Quantity :</p>
-                        <p class="price float-price">5</p>
-                        <button class="remove-from-cart" data-role="button" data-shadow="false" data-theme="none">
-                                        Remove
-                                      </button>
-                    </div>
                 </div>
             </div>
 
-            <div class="checkout-btn-cart">
-                <button type="submit" class="login-button ui-btn ui-btn-inline rounded-button">Pay $15000</button>
+            <div id="btn-checkout">
+
             </div>
+        </div>
             <br>
             <br>
             <br>
@@ -177,5 +92,7 @@
         </div>
         <!-- /content -->
 </body>
+<script type="text/javascript" src="../js/Cart.js"></script>
+<script type="text/javascript" src="../js/main.js"></script>
 
 </html>
